--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e50d289e-803f-436f-b48c-6d13954f1c4a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
